--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
             </section>
         </main>
         <footer>
-            <a href="mailto:luther.karper@live.com" target="_blank"><i class="fas fa-envelope mail-icon"></i></a>
-            <p>Send me a message at: <a class="footer-email" href="mailto:luther.karper@live.com"
-                    target="_blank">luther.karper@live.com</a></p>
+            <a href="mailto:luther.karper@live.com" target="_blank"><i class="fas fa-envelope footer-icon"></i></a>
+            <a href="https://github.com/lkarper" target="_blank"><i class="fab fa-github footer-icon"></i></a>
             <a href="http://www.linkedin.com/in/luther-karper" target="_blank"><i
-                    class="fab fa-linkedin-in linked-in"></i></a>
+                    class="fab fa-linkedin-in footer-icon"></i></a>
         </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
