--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         <footer>
             <a href="mailto:luther.karper@live.com" target="_blank"><i class="fas fa-envelope footer-icon"></i></a>
             <a href="https://github.com/lkarper" target="_blank"><i class="fab fa-github footer-icon"></i></a>
-            <a href="http://www.linkedin.com/in/luther-karper" target="_blank"><i
-                    class="fab fa-linkedin-in footer-icon"></i></a>
+            <a href="http://www.linkedin.com/in/luther-karper" target="_blank"><i class="fab fa-linkedin-in footer-icon"></i></a>
         </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
