--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <section class="portfolio hidden">
                 <h2>Portfolio:</h2>
                 <section class="port-section">
+                    <h3>Quiz App on the Julio-Claudian Emperors</h3>
                     <div class="js-port-big port-img-big" role="img">
                         <img src="images/quiz-app-landing-small.png" alt="Quiz app landing page.">
                     </div>
@@ -66,23 +67,61 @@
                         <a href="https://github.com/lkarper/quiz-app" target="_blank">GitHub</a>
                         <a href="https://lkarper.github.io/quiz-app/" target="_blank">Demo</a>
                     </div>
-                    <h3>Quiz App on the Julio-Claudian Emperors</h3>
                     <div class="tech-container">
+                        <p>Created with: </p>
                         <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon">
                         <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon">
                         <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon">
                         <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon">
                     </div>
-                    <p>This app, designed for students and teachers, quizzes users on their knowledge of the
+                    <p class="project-description">This app, designed for students and teachers, quizzes users on their knowledge of the
                         Julio-Claudian emperors of Rome. Throughout the quiz, users can see their progress and current
-                        score. Upon completion, users are presented with a score-dependent message and image.</p>     
+                        score. Upon completion, users are presented with a score-dependent message and image.</p>
+                </section>
+                <section class="port-section">
+                    <h3>Restaurant Roulette</h3>
+                    <div class="js-port-big port-img-big" role="img">
+                        <img src="images/rr-screenshots/landing.png" alt="Restaurant Roulette landing page.">
+                    </div>
+                    <div role="img" class="carousel">
+                        <a href="#"><img src="images/rr-screenshots/landing.png"
+                                alt="Restaurant Roulette landing page."></a>
+                        <a href="#"><img src="images/rr-screenshots/search.png"
+                                alt="Restaurant Roulette search page."></a>
+                        <a href="#"><img src="images/rr-screenshots/results1.png"
+                                alt="Restaurant Roulette results page."></a>
+                        <a href="#"><img src="images/rr-screenshots/directions1.png"
+                                alt="Restaurant Roulette directions page."></a>
+                    </div>
+                    <p class="click-to-enlarge">(Click to enlarge)</p>
+                    <div class="project-links">
+                        <a href="https://github.com/lkarper/restaurant-roulette" target="_blank">GitHub</a>
+                        <a href="https://lkarper.github.io/restaurant-roulette/" target="_blank">Demo</a>
+                    </div>
+                    <div class="tech-container">
+                        <p>Created with: </p>
+                        <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon">
+                        <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon">
+                        <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon">
+                        <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon">
+                    </div>
+                    <p class="project-description">Restaurant Roulette was made for indecisive hungry people who know that they want to dine out but
+                        cannot decide where. Users simply enter some basic information on where they’d like to eat, a
+                        city or zip-code, and (optionally) what sorts of restaurants they enjoy. Users then spin the
+                        restaurant wheel to get information from Foursquare on a random restaurant that meets their
+                        needs. While results are filtered by the needs of users, they are otherwise random. Spin until
+                        you’re satisfied or let luck be your guide and discover new places along the way! Once users
+                        like the looks of a restaurant, they can enter the location of a point of departure and get maps
+                        and step-by-step directions to that restaurant from MapQuest. Whether you drive, walk, or cycle,
+                        Restaurant Roulette can help you find your new favorite restaurant!</p>
                 </section>
             </section>
         </main>
         <footer>
             <a href="mailto:luther.karper@live.com" target="_blank"><i class="fas fa-envelope footer-icon"></i></a>
             <a href="https://github.com/lkarper" target="_blank"><i class="fab fa-github footer-icon"></i></a>
-            <a href="http://www.linkedin.com/in/luther-karper" target="_blank"><i class="fab fa-linkedin-in footer-icon"></i></a>
+            <a href="http://www.linkedin.com/in/luther-karper" target="_blank"><i
+                    class="fab fa-linkedin-in footer-icon"></i></a>
         </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
