Add more images of Restaurant Roulette

--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
                                 alt="Restaurant Roulette search page."></a>
                         <a href="#"><img src="images/rr-screenshots/results1.png"
                                 alt="Restaurant Roulette results page."></a>
+                        <a href="#"><img src="images/rr-screenshots/results2.png"
+                                alt="Restaurant Roulette results page."></a>
+                        <a href="#"><img src="images/rr-screenshots/results3.png"
+                                alt="Restaurant Roulette results page."></a>
+                        <a href="#"><img src="images/rr-screenshots/results4.png"
+                                alt="Restaurant Roulette results page."></a>
+                        <a href="#"><img src="images/rr-screenshots/directions-search.png"
+                                alt="Restaurant Roulette directions page."></a>
                         <a href="#"><img src="images/rr-screenshots/directions1.png"
                                 alt="Restaurant Roulette directions page."></a>
                     </div>
