--- a/index.html
+++ b/index.html
@@ -54,14 +54,21 @@
                 <section class="port-section">
                     <h3>Quiz App on the Julio-Claudian Emperors</h3>
                     <div class="js-port-big port-img-big" role="img">
-                        <img src="images/quiz-app-landing-small.png" alt="Quiz app landing page.">
+                        <div class="slides">
+                            <img src="images/quiz-app-landing-small.png" alt="Quiz app landing page.">
+                            <img src="images/quiz-app-question-small.png" alt="Quiz app question page.">
+                            <img src="images/quiz-app-answer-small.png" alt="Quiz app answer page.">
+                            <img src="images/quiz-app-results-small.png" alt="Quiz app results page.">
+                        </div>
+                        <button type="button" class="previous">&#10094;</button>
+                        <button type="button" class="next">&#10095;</button>
                     </div>
-                    <div role="img" class="carousel">
+                    <!-- <div role="img" class="carousel">
                         <a href="#"><img src="images/quiz-app-landing-small.png" alt="Quiz app landing page."></a>
                         <a href="#"><img src="images/quiz-app-question-small.png" alt="Quiz app question page."></a>
                         <a href="#"><img src="images/quiz-app-answer-small.png" alt="Quiz app answer page."></a>
                         <a href="#"><img src="images/quiz-app-results-small.png" alt="Quiz app results page."></a>
-                    </div>
+                    </div> -->
                     <p class="click-to-enlarge">(Click to enlarge)</p>
                     <div class="project-links">
                         <a href="https://github.com/lkarper/quiz-app" target="_blank">GitHub</a>
@@ -81,9 +88,28 @@
                 <section class="port-section">
                     <h3>Restaurant Roulette</h3>
                     <div class="js-port-big port-img-big" role="img">
-                        <img src="images/rr-screenshots/landing.png" alt="Restaurant Roulette landing page.">
+                        <div class="slides">
+                                <img src="images/rr-screenshots/landing.png"
+                                        alt="Restaurant Roulette landing page.">
+                                <img src="images/rr-screenshots/search.png"
+                                        alt="Restaurant Roulette search page.">
+                                <img src="images/rr-screenshots/results1.png"
+                                        alt="Restaurant Roulette results page.">
+                                <img src="images/rr-screenshots/results2.png"
+                                        alt="Restaurant Roulette results page.">
+                                <img src="images/rr-screenshots/results3.png"
+                                        alt="Restaurant Roulette results page.">
+                                <img src="images/rr-screenshots/results4.png"
+                                        alt="Restaurant Roulette results page.">
+                                <img src="images/rr-screenshots/directions-search.png"
+                                        alt="Restaurant Roulette directions page.">
+                                <img src="images/rr-screenshots/directions1.png"
+                                        alt="Restaurant Roulette directions page.">
+                        </div>
+                        <button type="button" class="previous">&#10094;</button>
+                        <button type="button" class="next">&#10095;</button>
                     </div>
-                    <div role="img" class="carousel">
+                    <!-- <div role="img" class="carousel">
                         <a href="#"><img src="images/rr-screenshots/landing.png"
                                 alt="Restaurant Roulette landing page."></a>
                         <a href="#"><img src="images/rr-screenshots/search.png"
@@ -100,7 +126,7 @@
                                 alt="Restaurant Roulette directions page."></a>
                         <a href="#"><img src="images/rr-screenshots/directions1.png"
                                 alt="Restaurant Roulette directions page."></a>
-                    </div>
+                    </div> -->
                     <p class="click-to-enlarge">(Click to enlarge)</p>
                     <div class="project-links">
                         <a href="https://github.com/lkarper/restaurant-roulette" target="_blank">GitHub</a>
