--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <section class="port-section">
                     <h3>Quiz App on the Julio-Claudian Emperors</h3>
                     <div class="js-port-big port-img-big" role="img">
-                        <div class="slides">
+                        <div class="slides js-project1">
                             <img src="images/quiz-app-landing-small.png" alt="Quiz app landing page.">
                             <img src="images/quiz-app-question-small.png" alt="Quiz app question page.">
                             <img src="images/quiz-app-answer-small.png" alt="Quiz app answer page.">
@@ -88,7 +88,7 @@
                 <section class="port-section">
                     <h3>Restaurant Roulette</h3>
                     <div class="js-port-big port-img-big" role="img">
-                        <div class="slides">
+                        <div class="slides js-project2">
                                 <img src="images/rr-screenshots/landing.png"
                                         alt="Restaurant Roulette landing page.">
                                 <img src="images/rr-screenshots/search.png"
