Update Restaurant Roulette carousel
Restaurant Roulette carousel altered so that photos fit on one row
instead of wrapping into two.

--- a/index.html
+++ b/index.html
@@ -83,23 +83,25 @@
                     <div class="js-port-big port-img-big" role="img">
                         <img src="images/rr-screenshots/landing.png" alt="Restaurant Roulette landing page.">
                     </div>
-                    <div role="img" class="carousel">
-                        <a href="#"><img src="images/rr-screenshots/landing.png"
-                                alt="Restaurant Roulette landing page."></a>
-                        <a href="#"><img src="images/rr-screenshots/search.png"
-                                alt="Restaurant Roulette search page."></a>
-                        <a href="#"><img src="images/rr-screenshots/results1.png"
-                                alt="Restaurant Roulette results page."></a>
-                        <a href="#"><img src="images/rr-screenshots/results2.png"
-                                alt="Restaurant Roulette results page."></a>
-                        <a href="#"><img src="images/rr-screenshots/results3.png"
-                                alt="Restaurant Roulette results page."></a>
-                        <a href="#"><img src="images/rr-screenshots/results4.png"
-                                alt="Restaurant Roulette results page."></a>
-                        <a href="#"><img src="images/rr-screenshots/directions-search.png"
-                                alt="Restaurant Roulette directions page."></a>
-                        <a href="#"><img src="images/rr-screenshots/directions1.png"
-                                alt="Restaurant Roulette directions page."></a>
+                    <div class="carousel-rr-container">
+                        <div role="img" class="carousel carousel-rr">
+                            <a class="js-rr" href="#"><img src="images/rr-screenshots/landing.png"
+                                    alt="Restaurant Roulette landing page."></a>
+                            <a class="js-rr" href="#"><img src="images/rr-screenshots/search.png"
+                                    alt="Restaurant Roulette search page."></a>
+                            <a class="js-rr" href="#"><img src="images/rr-screenshots/results1.png"
+                                    alt="Restaurant Roulette results page."></a>
+                            <a class="js-rr" href="#"><img src="images/rr-screenshots/results2.png"
+                                    alt="Restaurant Roulette results page."></a>
+                            <a class="js-rr" href="#"><img src="images/rr-screenshots/results3.png"
+                                    alt="Restaurant Roulette results page."></a>
+                            <a class="js-rr" href="#"><img src="images/rr-screenshots/results4.png"
+                                    alt="Restaurant Roulette results page."></a>
+                            <a class="js-rr" href="#"><img src="images/rr-screenshots/directions-search.png"
+                                    alt="Restaurant Roulette directions page."></a>
+                            <a class="js-rr" href="#"><img src="images/rr-screenshots/directions1.png"
+                                    alt="Restaurant Roulette directions page."></a>
+                        </div>
                     </div>
                     <p class="click-to-enlarge">(Click to enlarge)</p>
                     <div class="project-links">
