--- a/index.html
+++ b/index.html
@@ -52,64 +52,110 @@
             <section class="portfolio hidden">
                 <h2>Portfolio:</h2>
                 <section class="port-section">
-                    <h3>Quiz App on the Julio-Claudian Emperors</h3>
+                    <h3>Dog Date</h3>
                     <div class="js-port-big port-img-big" role="img">
-                        <img src="images/quiz-app-landing-small.png" alt="Quiz app landing page.">
-                    <!-- <div class="slides js-project1">
-                            <img src="images/quiz-app-landing-small.png" alt="Quiz app landing page.">
-                            <img src="images/quiz-app-question-small.png" alt="Quiz app question page.">
-                            <img src="images/quiz-app-answer-small.png" alt="Quiz app answer page.">
-                            <img src="images/quiz-app-results-small.png" alt="Quiz app results page.">
-                        </div>
-                        <button type="button" class="previous">&#10094;</button>
-                        <button type="button" class="next">&#10095;</button> -->
+                        <img src="images/dog-date-screenshots/dashboard_1.png" 
+                                alt="Dog Date dashboard page.">
                     </div>
-                    <div role="img" class="carousel">
-                        <a href="#"><img src="images/quiz-app-landing-small.png" alt="Quiz app landing page."></a>
-                        <a href="#"><img src="images/quiz-app-question-small.png" alt="Quiz app question page."></a>
-                        <a href="#"><img src="images/quiz-app-answer-small.png" alt="Quiz app answer page."></a>
-                        <a href="#"><img src="images/quiz-app-results-small.png" alt="Quiz app results page."></a>
+                    <div class="carousel-rr-container">
+                        <div role="img" class="carousel carousel-rr">
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/dashboard_1.png" 
+                                alt="Dog Date dashboard page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/dashboard_2.png" 
+                                alt="Dog Date dashboard page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/howls_search_1.png"
+                                    alt="Dog Date howls search page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/howls_search_2.png"
+                                    alt="Dog Date howls search page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/dog_profile_1.png"
+                                    alt="Dog Date dog profile page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/dog_profile_2.png"
+                                    alt="Dog Date dog profile page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/dog_profile_3.png"
+                                    alt="Dog Date dog profile page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/dog_profile_4.png"
+                                    alt="Dog Date dog profile page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/review_1.png"
+                                    alt="Dog Date review page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/review_2.png"
+                                    alt="Dog Date review page."></a>
+                            <a class="js-rr" href="#"><img src="images/dog-date-screenshots/review_3.png"
+                                    alt="Dog Date review page."></a>
+                        </div>
                     </div>
                     <p class="click-to-enlarge">(Click to enlarge)</p>
                     <div class="project-links">
-                        <a href="https://github.com/lkarper/quiz-app" target="_blank">GitHub</a>
-                        <a href="https://lkarper.github.io/quiz-app/" target="_blank">Demo</a>
+                        <a href="https://github.com/lkarper/dog-date-app" target="_blank">GitHub (Front-end)</a>
+                        <a href="https://github.com/lkarper/dog-date-api" target="_blank">GitHub (Back-end)</a>
+                        <a href="https://dog-date-app.herokuapp.com/" target="_blank">Demo</a>
                     </div>
                     <div class="tech-container">
                         <p>Created with: </p>
+                        <img class="tech-icon" src="/images/react-icon.png" alt="React icon.">
+                        <img class="tech-icon" src="/images/node-icon.png" alt="Node.js icon.">
+                        <img class="tech-icon" src="/images/psql-icon.png" alt="PostgreSql icon">
                         <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon">
                         <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon">
                         <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon">
-                        <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon">
                     </div>
-                    <p class="project-description">This app, designed for students and teachers, quizzes users on their knowledge of the
-                        Julio-Claudian emperors of Rome. Throughout the quiz, users can see their progress and current
-                        score. Upon completion, users are presented with a score-dependent message and image.</p>
+                    <p class="project-description">Dog Date is a web app for users who want to find playmates for their dogs.  Whether you have one or one-hundred dogs, you can create profiles for them on Dog Date. You can set a profile picture for your dog, characterize its energy-levels, obedience, experience with other dogs, and more! 
+                        This allows others to decide if your dog is the right playmate for their dog!
+                        Other users can leave reviews of your dog(s) and their dates, and then you can comment on those reviews in response.
+                    </p>
+                    <p class="project-description">
+                        On Dog Date, you find playmates for your dog by creating and viewing "Howls". Howls are essentially a message from a user that he or she is looking for playmates for his or her canine companion(s)! There are two types of Howls: "one-time" and "recurring" playdates. "One-time" playdates are requests for a playdate on a specific date. Users post a date, available time frames, and a proposed location, and then wait for other interested users to contact them. "Recurring" Howls, on the other hand, let users know that a user is generally available at certain times for a playdate (e.g. Saturdays from 11:00 am - 4:00 pm).
+                        On the Howls page users can filter howls by zipcode, state, or the average rating of dogs in the Howl (more on ratings below.)
+                    </p>
+                    <p class="project-description">
+                        You can also view profiles of other users' dogs and even save those profiles by adding them to your pack! 
+                        A dog's profile page not only gives you a description and photo of a user's dog, but it likewise gives you a handy list of Howls about that dog and reviews of that dog by other users. 
+                        This allows you quickly to see when and where that dog is available to play and to decide if that dog is the right dog date for your pooch!
+                    </p>
+                </section>
+                <section class="port-section">
+                    <h3>Legendum</h3>
+                    <div class="js-port-big port-img-big" role="img">
+                        <img src="images/legendum-screenshots/landing.png" alt="Legendum landing page.">
+                    </div>
+                    <div class="carousel-rr-container">
+                        <div role="img" class="carousel carousel-rr">
+                            <a class="js-rr" href="#"><img src="images/legendum-screenshots/landing.png" 
+                                alt="Legendum landing page."></a>
+                            <a class="js-rr" href="#"><img src="images/legendum-screenshots/story.png"
+                                    alt="Legendum story page."></a>
+                            <a class="js-rr" href="#"><img src="images/legendum-screenshots/learn.png"
+                                    alt="Legendum learn page."></a>
+                            <a class="js-rr" href="#"><img src="images/legendum-screenshots/quiz.png"
+                                    alt="Legendum quiz page."></a>
+                            <a class="js-rr" href="#"><img src="images/legendum-screenshots/Dashboard_1.png"
+                                    alt="Legendum dashboard page."></a>
+                            <a class="js-rr" href="#"><img src="images/legendum-screenshots/Dashboard_2.png"
+                                    alt="Legendum dashboard page."></a>
+                        </div>
+                    </div>
+                    <p class="click-to-enlarge">(Click to enlarge)</p>
+                    <div class="project-links">
+                        <a href="https://github.com/lkarper/legendum-proto" target="_blank">GitHub (Front-end)</a>
+                        <a href="https://github.com/lkarper/legendum-server" target="_blank">GitHub (Back-end)</a>
+                        <a href="https://legendum.herokuapp.com/" target="_blank">Demo</a>
+                    </div>
+                    <div class="tech-container">
+                        <p>Created with: </p>
+                        <img class="tech-icon" src="/images/react-icon.png" alt="React icon.">
+                        <img class="tech-icon" src="/images/node-icon.png" alt="Node.js icon.">
+                        <img class="tech-icon" src="/images/psql-icon.png" alt="PostgreSql icon">
+                        <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon">
+                        <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon">
+                        <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon">
+                    </div>
+                    <p class="project-description">Legendum is a story-based Latin learning app.  Users who register can save their progress and notes that they can use while they learn.  
+                        I plan to continue developing this app by regularly adding more lessons.
+                    </p>
                 </section>
                 <section class="port-section">
                     <h3>Restaurant Roulette</h3>
                     <div class="js-port-big port-img-big" role="img">
                         <img src="images/rr-screenshots/landing.png" alt="Restaurant Roulette landing page.">
-                        <!-- <div class="slides js-project2">
-                                <img src="images/rr-screenshots/landing.png"
-                                        alt="Restaurant Roulette landing page.">
-                                <img src="images/rr-screenshots/search.png"
-                                        alt="Restaurant Roulette search page.">
-                                <img src="images/rr-screenshots/results1.png"
-                                        alt="Restaurant Roulette results page.">
-                                <img src="images/rr-screenshots/results2.png"
-                                        alt="Restaurant Roulette results page.">
-                                <img src="images/rr-screenshots/results3.png"
-                                        alt="Restaurant Roulette results page.">
-                                <img src="images/rr-screenshots/results4.png"
-                                        alt="Restaurant Roulette results page.">
-                                <img src="images/rr-screenshots/directions-search.png"
-                                        alt="Restaurant Roulette directions page.">
-                                <img src="images/rr-screenshots/directions1.png"
-                                        alt="Restaurant Roulette directions page.">
-                        </div>
-                        <button type="button" class="previous">&#10094;</button>
-                        <button type="button" class="next">&#10095;</button> -->
                     </div>
                     <div class="carousel-rr-container">
                         <div role="img" class="carousel carousel-rr">
@@ -138,10 +184,10 @@
                     </div>
                     <div class="tech-container">
                         <p>Created with: </p>
-                        <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon">
-                        <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon">
-                        <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon">
-                        <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon">
+                        <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
+                        <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
+                        <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon.">
+                        <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon.">
                     </div>
                     <p class="project-description">Restaurant Roulette was made for indecisive hungry people who know that they want to dine out but
                         cannot decide where. Users simply enter some basic information on where they’d like to eat, a
@@ -152,6 +198,34 @@
                         like the looks of a restaurant, they can enter the location of a point of departure and get maps
                         and step-by-step directions to that restaurant from MapQuest. Whether you drive, walk, or cycle,
                         Restaurant Roulette can help you find your new favorite restaurant!</p>
+                </section>
+                <section class="port-section">
+                    <h3>Quiz App on the Julio-Claudian Emperors</h3>
+                    <div class="js-port-big port-img-big" role="img">
+                        <img src="images/quiz-app-landing-small.png" alt="Quiz app landing page.">
+
+                    </div>
+                    <div role="img" class="carousel">
+                        <a href="#"><img src="images/quiz-app-landing-small.png" alt="Quiz app landing page."></a>
+                        <a href="#"><img src="images/quiz-app-question-small.png" alt="Quiz app question page."></a>
+                        <a href="#"><img src="images/quiz-app-answer-small.png" alt="Quiz app answer page."></a>
+                        <a href="#"><img src="images/quiz-app-results-small.png" alt="Quiz app results page."></a>
+                    </div>
+                    <p class="click-to-enlarge">(Click to enlarge)</p>
+                    <div class="project-links">
+                        <a href="https://github.com/lkarper/quiz-app" target="_blank">GitHub</a>
+                        <a href="https://lkarper.github.io/quiz-app/" target="_blank">Demo</a>
+                    </div>
+                    <div class="tech-container">
+                        <p>Created with: </p>
+                        <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
+                        <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
+                        <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon.">
+                        <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon.">
+                    </div>
+                    <p class="project-description">This app, designed for students and teachers, quizzes users on their knowledge of the
+                        Julio-Claudian emperors of Rome. Throughout the quiz, users can see their progress and current
+                        score. Upon completion, users are presented with a score-dependent message and image.</p>
                 </section>
             </section>
         </main>
