--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                     </div>
                     <div class="tech-container">
                         <p>Created with: </p>
-                        <img class="tech-icon" src="/images/react-icon.png" alt="React icon.">
-                        <img class="tech-icon" src="/images/node-icon.png" alt="Node.js icon.">
-                        <img class="tech-icon" src="/images/psql-icon.png" alt="PostgreSql icon">
+                        <img class="tech-icon" src="images/react-icon.png" alt="React icon.">
+                        <img class="tech-icon" src="images/node-icon.png" alt="Node.js icon.">
+                        <img class="tech-icon" src="images/psql-icon.png" alt="PostgreSql icon">
                         <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon">
                         <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon">
                         <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon">
@@ -141,9 +141,9 @@
                     </div>
                     <div class="tech-container">
                         <p>Created with: </p>
-                        <img class="tech-icon" src="/images/react-icon.png" alt="React icon.">
-                        <img class="tech-icon" src="/images/node-icon.png" alt="Node.js icon.">
-                        <img class="tech-icon" src="/images/psql-icon.png" alt="PostgreSql icon">
+                        <img class="tech-icon" src="images/react-icon.png" alt="React icon.">
+                        <img class="tech-icon" src="images/node-icon.png" alt="Node.js icon.">
+                        <img class="tech-icon" src="images/psql-icon.png" alt="PostgreSql icon">
                         <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon">
                         <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon">
                         <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon">
