Add express.js icon to technologies

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                         <p>Created with: </p>
                         <img class="tech-icon" src="images/react-icon.png" alt="React icon.">
                         <img class="tech-icon" src="images/node-icon.png" alt="Node.js icon.">
+                        <img class="tech-icon" src="images/express-icon.png" alt="Express.js icon.">
                         <img class="tech-icon" src="images/psql-icon.png" alt="PostgreSql icon">
                         <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon">
                         <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon">
@@ -172,6 +173,7 @@
                         <p>Created with: </p>
                         <img class="tech-icon" src="images/react-icon.png" alt="React icon.">
                         <img class="tech-icon" src="images/node-icon.png" alt="Node.js icon.">
+                        <img class="tech-icon" src="images/express-icon.png" alt="Express.js icon.">
                         <img class="tech-icon" src="images/psql-icon.png" alt="PostgreSql icon.">
                         <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
                         <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
