--- a/index.html
+++ b/index.html
@@ -91,13 +91,15 @@
                     </div>
                     <div class="tech-container">
                         <p>Created with: </p>
-                        <img class="tech-icon" src="images/react-icon.png" alt="React icon.">
-                        <img class="tech-icon" src="images/node-icon.png" alt="Node.js icon.">
-                        <img class="tech-icon" src="images/express-icon.png" alt="Express.js icon.">
-                        <img class="tech-icon" src="images/psql-icon.png" alt="PostgreSql icon">
-                        <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon">
-                        <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon">
-                        <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon">
+                        <div class="tech-icons-container">
+                            <img class="tech-icon" src="images/react-icon.png" alt="React icon.">
+                            <img class="tech-icon" src="images/node-icon.png" alt="Node.js icon.">
+                            <img class="tech-icon" src="images/express-icon.png" alt="Express.js icon.">
+                            <img class="tech-icon" src="images/psql-icon.png" alt="PostgreSql icon.">
+                            <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
+                            <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
+                            <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon.">
+                        </div>
                     </div>
                     <p class="project-description">
                         Legendum is a Latin learning app that uses stories, images, and short quizzes to teach Latin!
@@ -171,13 +173,15 @@
                     </div>
                     <div class="tech-container">
                         <p>Created with: </p>
-                        <img class="tech-icon" src="images/react-icon.png" alt="React icon.">
-                        <img class="tech-icon" src="images/node-icon.png" alt="Node.js icon.">
-                        <img class="tech-icon" src="images/express-icon.png" alt="Express.js icon.">
-                        <img class="tech-icon" src="images/psql-icon.png" alt="PostgreSql icon.">
-                        <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
-                        <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
-                        <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon.">
+                        <div class="tech-icons-container">
+                            <img class="tech-icon" src="images/react-icon.png" alt="React icon.">
+                            <img class="tech-icon" src="images/node-icon.png" alt="Node.js icon.">
+                            <img class="tech-icon" src="images/express-icon.png" alt="Express.js icon.">
+                            <img class="tech-icon" src="images/psql-icon.png" alt="PostgreSql icon.">
+                            <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
+                            <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
+                            <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon.">
+                        </div>
                     </div>
                     <p class="project-description">
                         Dog Date is a web app for users who want to find playmates for their dogs. Whether you have one
@@ -238,10 +242,12 @@
                     </div>
                     <div class="tech-container">
                         <p>Created with: </p>
-                        <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
-                        <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
-                        <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon.">
-                        <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon.">
+                        <div class="tech-icons-container">
+                            <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
+                            <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
+                            <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon.">
+                            <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon.">
+                        </div>
                     </div>
                     <p class="project-description">Restaurant Roulette was made for indecisive hungry people who know
                         that they want to dine out but
@@ -273,10 +279,12 @@
                     </div>
                     <div class="tech-container">
                         <p>Created with: </p>
-                        <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
-                        <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
-                        <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon.">
-                        <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon.">
+                        <div class="tech-icons-container">
+                            <img class="tech-icon" src="images/HTML5-icon.png" alt="HTML5 icon.">
+                            <img class="tech-icon" src="images/CSS3-icon.png" alt="CSS3 icon.">
+                            <img class="tech-icon" src="images/javascript-icon.png" alt="JavaScript icon.">
+                            <img class="tech-icon" src="images/jquery-icon.png" alt="jQuery icon.">
+                        </div>
                     </div>
                     <p class="project-description">This app, designed for students and teachers, quizzes users on their
                         knowledge of the
