--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         "Recurring" Howls, on the other hand, let users know that a user is generally available at
                         certain times for a playdate (e.g. Saturdays from 11:00 am - 4:00 pm).
                         On the Howls page users can filter howls by zipcode, state, or the average rating of dogs in the
-                        Howl (more on ratings below.)
+                        Howl (more on ratings below).
                     </p>
                     <p class="project-description">
                         You can also view profiles of other users' dogs and even save those profiles by adding them to
