--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         reviews in response.
                     </p>
                     <p class="project-description">
-                        On Dog Date, you find playmates for your dog by creating and viewing "Howls". Howls are
+                        On Dog Date, you find playmates for your dog by creating and viewing "Howls". A Howl is
                         essentially a message from a user that he or she is looking for playmates for his or her canine
                         companion(s)! There are two types of Howls: "one-time" and "recurring" playdates. "One-time"
                         playdates are requests for a playdate on a specific date. Users post a date, available time
